{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 185,
  "lineage": "fd1f01ac-7b0b-46b7-8df9-91271bbcc121",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig-rocci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:internet-gateway/igw-0bcb245e73742ce88",
            "id": "igw-0bcb245e73742ce88",
            "owner_id": "727646469590",
            "region": "eu-central-1",
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:route-table/rtb-0b06456e4a97f418d",
            "id": "rtb-0b06456e4a97f418d",
            "owner_id": "727646469590",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bcb245e73742ce88",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "rtb-0b06456e4a97f418d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.ig-rocci",
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097eec9810cc606fb",
            "region": "eu-central-1",
            "route_table_id": "rtb-0b06456e4a97f418d",
            "subnet_id": "subnet-0445ba325fe532fab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ig-rocci",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-aurora-rocci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:security-group/sg-0b55d3bb74f694e8e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b55d3bb74f694e8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-048d3c57d089e5fef"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-sg",
            "name_prefix": "",
            "owner_id": "727646469590",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "sg-0b55d3bb74f694e8e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.sg-eb-rocci",
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-eb-rocci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:security-group/sg-048d3c57d089e5fef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048d3c57d089e5fef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eb-sg",
            "name_prefix": "",
            "owner_id": "727646469590",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "sg-048d3c57d089e5fef",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eb_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "147.161.250.127/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-417672936",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-central-1",
            "security_group_id": "sg-048d3c57d089e5fef",
            "security_group_rule_id": "sgr-0b0b214e56942ed88",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg-eb-rocci",
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:subnet/subnet-05fdd942a3cdeaa89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.40.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fdd942a3cdeaa89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646469590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "subnet-05fdd942a3cdeaa89",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:subnet/subnet-0918ffe1fca6f22b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0918ffe1fca6f22b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646469590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "subnet-0918ffe1fca6f22b4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:subnet/subnet-00c0bd9e876f1b231",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c0bd9e876f1b231",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646469590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "subnet-00c0bd9e876f1b231",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:subnet/subnet-0445ba325fe532fab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.40.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0445ba325fe532fab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "727646469590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-0a85741fb9581e143"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "727646469590",
            "id": "subnet-0445ba325fe532fab",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.rocci"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rocci",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:727646469590:vpc/vpc-0a85741fb9581e143",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.40.0.0/16",
            "default_network_acl_id": "acl-084c24c67038b2673",
            "default_route_table_id": "rtb-05711d796a73d3b43",
            "default_security_group_id": "sg-0dd43784f05907677",
            "dhcp_options_id": "dopt-0db8f925ac17b188c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a85741fb9581e143",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05711d796a73d3b43",
            "owner_id": "727646469590",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}